<resources>
    <string name="label_login">Login</string>
    <string name="label_search">Search</string>
    <string name="label_rankings">Rankings</string>
    <string name="label_following">Following</string>
    <string name="label_collection">Collection</string>
    <string name="label_user">User</string>
    <string name="label_work">Work ID</string>
    <string name="label_rating">Rating</string>
    <string name="label_settings">Settings</string>
    <string name="label_tags">Tags to Exclude</string>
    <string name="label_help">Help</string>

    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_reset">Reset</string>

    <string name="tab_download">Download</string>
    <string name="tab_archive">Archive</string>

    <string name="button_login">Login</string>
    <string name="button_guest">Continue as Guest</string>
    <string name="button_download">Download</string>

    <string name="message_complete">The download has been completed.</string>
    <string name="message_stop">The download has been stopped.</string>
    <string name="message_disclaimer">Pxloader is an image downloader that is not related to Pixiv.\n\nPxloader respects the copyright of the creator and prohibits the download of images for commercial use or without the authorization of the creator.\n\nAnd also, the user is responsible for all consequences of using Pxloader.</string>
    <string name="message_ignore_optimization">Set Pxloader as a power saving exclusion to prevents unexpected stops.</string>
    <string name="message_help_login">Due to the recent policy change of Pixiv, third-party login via ID/password has become impossible.\n\nDo you want to go to the Google drive where I wrote how to issue tokens?</string>
    <string name="message_rating">Please rate Pxloader.</string>
    <string name="message_loading">There are no images or they are being loaded.</string>

    <string name="hint_token">Refresh Token</string>
    <string name="hint_keyword">Keyword</string>
    <string name="hint_bookmarks">Minimum Number of Likes</string>
    <string name="hint_order">Order</string>
    <string name="hint_age">Age Limit</string>
    <string name="hint_date">Date</string>
    <string name="hint_aggregation_mode">Aggregation Mode</string>
    <string name="hint_publicity">Publicity</string>
    <string name="hint_user_id">User ID (number)</string>
    <string name="hint_work_id">Work ID (number)</string>
    <string name="hint_tag">Tag</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="message_login">Logging in</string>
    <string name="message_index">Indexing</string>
    <string name="page">page</string>
    <string name="page_all">all pages</string>
    <string name="last_downloaded">Last Downloaded</string>
    <string name="count">Counts</string>

    <string name="toast_restore_purchases">The purchase history has been restored.</string>
    <string name="toast_donation">Thank you for your donation.</string>
    <string name="toast_remove_ads">The ads has been removed.</string>
    <string name="toast_error_permissions">Unable to log in because permission is denied.</string>
    <string name="toast_error_login">Login failed.</string>
    <string name="toast_error_aggregation">That date has not yet been aggregated.</string>
    <string name="toast_error_path">Choose a deeper path.</string>
    <string name="toast_error_remove_ads">%d days left for promotion.</string>
    <string name="toast_error_guest">This cannot be used by the guest.</string>
    <string name="toast_error_temporarily_unavailable">Search and Rankings are unavailable temporarily. We will fix it as soon as possible.</string>

    <string name="setting_create_sub_directory">Create Subdirectory</string>
    <string name="setting_directory_path">Directory Path</string>
    <string name="setting_file_name_format">File Name Format</string>
    <string name="setting_tags_to_exclude">Tags to Exclude</string>
    <string name="setting_about">About</string>
    <string name="setting_disclaimer">Disclaimer</string>
    <string name="setting_remove_ads">Remove Ads</string>
    <string name="setting_share">Share</string>
</resources>
