<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/login_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.WhiteAppbarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_SE_default"
            android:paddingTop="@dimen/padding_TB_default"
            android:paddingEnd="@dimen/padding_SE_default"
            android:paddingBottom="@dimen/padding_TB_default">

            <ImageView
                android:id="@+id/login_icon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size_icon"
                android:src="@drawable/icon_app"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/login_token"
                style="@style/AppTheme.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/hint_token"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/login_icon" />

            <TextView
                android:id="@+id/login"
                style="@style/AppTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/button_login"
                app:layout_constraintTop_toBottomOf="@id/login_token" />

            <TextView
                android:id="@+id/login_help"
                style="@style/AppTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:backgroundTint="@color/color_signature_light_gray"
                android:text="@string/label_help"
                android:textColor="@color/color_signature_dark_gray"
                app:layout_constraintTop_toBottomOf="@id/login" />

            <TextView
                android:id="@+id/login_guest"
                style="@style/AppTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:backgroundTint="@color/color_signature_orange"
                android:text="@string/button_guest"
                app:layout_constraintTop_toBottomOf="@id/login_help" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>